if (DRM_FOUND AND CMAKE_SYSTEM_NAME STREQUAL "Linux")
    if (MODULE_DRMFB)
        add_library(arfminesweeper-drmfb MODULE "drmfb.c" "../common/fb.c" "../common/stb_image_impl.c")
        target_compile_definitions(arfminesweeper-drmfb PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-drmfb ${DRM_LIBRARIES} m)
        target_include_directories(arfminesweeper-drmfb PUBLIC ${DRM_INCLUDE_DIRS})
        add_custom_target(symlink_arfminesweeper-drmfb ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-drmfb module_dir)
        message(STATUS "Building with module drmfb")
    else()
        message(STATUS "Not building with module drmfb")
    endif()

    if (STATIC_DRMFB)
        target_sources(arfminesweeper PRIVATE "drmfb.c" "../common/fb.c" "../common/stb_image_impl.c")
        target_link_libraries(arfminesweeper ${DRM_LIBRARIES} m)
        target_include_directories(arfminesweeper PUBLIC ${DRM_INCLUDE_DIRS})
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_DRMFB)
        message(STATUS "Building with static drmfb")
    else()
        message(STATUS "Not building with static drmfb")
    endif()
else()
    message(STATUS "No DRM support in non-Linux (no libdrm)")
endif()

