if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    if (MODULE_FBDEV)
        add_library(fbdev MODULE "fbdev.c" "../common/fb.c")
        target_compile_definitions(fbdev PUBLIC _MODULE_)
        target_link_libraries(fbdev m)
        add_custom_target(symlink_fbdev ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS fbdev module_dir)
        message(STATUS "Building with module fbdev")
    else()
        message(STATUS "Not building with module fbdev")
    endif()

    if (STATIC_FBDEV)
        target_sources(arfminesweeper PRIVATE "fbdev.c" "../common/fb.c")
        target_link_libraries(arfminesweeper m)
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_FBDEV)
        message(STATUS "Building with static fbdev")
    else()
        message(STATUS "Not building with static fbdev")
    endif()
else()
    message(STATUS "No fbdev support in non-Linux")
endif()

