if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    if (MODULE_FBDEV)
        add_library(arfminesweeper-fbdev MODULE "fbdev.c" "../common/fb.c" "../common/stb_image_impl.c")
        target_compile_definitions(arfminesweeper-fbdev PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-fbdev m)
        add_custom_target(symlink_arfminesweeper-fbdev ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-fbdev module_dir)
        message(STATUS "Building with module fbdev")
    else()
        message(STATUS "Not building with module fbdev")
    endif()

    if (STATIC_FBDEV)
        target_sources(arfminesweeper PRIVATE "fbdev.c" "../common/fb.c" "../common/stb_image_impl.c")
        target_link_libraries(arfminesweeper m)
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_FBDEV)
        message(STATUS "Building with static fbdev")
    else()
        message(STATUS "Not building with static fbdev")
    endif()
else()
    message(STATUS "No fbdev support in non-Linux")
endif()

