if (FLTK_FOUND)
    if (MODULE_FLTK)
        add_library(arfminesweeper-fltk MODULE "fltk.cpp")
        target_compile_definitions(arfminesweeper-fltk PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-fltk ${FLTK_LIBRARIES})
        target_include_directories(arfminesweeper-fltk PUBLIC "/usr/include/cairo/")
        add_custom_target(symlink_arfminesweeper-fltk ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-fltk module_dir)
        message(STATUS "Building with module fltk")
    else()
        message(STATUS "Not building with module fltk")
    endif()

    if (STATIC_FLTK)
        target_sources(arfminesweeper PRIVATE "fltk.cpp")
        target_link_libraries(arfminesweeper ${FLTK_LIBRARIES})
        target_include_directories(arfminesweeper PUBLIC "/usr/include/cairo/")
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_FLTK)
        message(STATUS "Building with static fltk")
    else()
        message(STATUS "Not building with static fltk")
    endif()
else()
    message(STATUS "No FLTK found")
endif()

