if (WIN32)
    if (MODULE_GDI)
        add_library(arfminesweeper-gdi MODULE "gdi.c")
        target_compile_definitions(arfminesweeper-gdi PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-gdi msimg32)
        add_custom_target(symlink_arfminesweeper-gdi ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-gdi module_dir)
        message(STATUS "Building with module gdi")
    else()
        message(STATUS "Not building with module gdi")
    endif()

    if (STATIC_GDI)
        target_sources(arfminesweeper PRIVATE "gdi.c")
        target_link_libraries(arfminesweeper msimg32)
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_GDI)
        message(STATUS "Building with static gdi")
    else()
        message(STATUS "Not building with static gdi")
    endif()
else()
    message(STATUS "No Win32 GDI support")
endif()

