if (OpenGL_OpenGL_FOUND AND GLUT_FOUND)
    if (MODULE_GL11)
        add_library(arfminesweeper-gl11 MODULE "gl11.c" "../common/gl_ffp.c")
        target_compile_definitions(arfminesweeper-gl11 PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-gl11 OpenGL::GL ${GLUT_LIBRARIES})
        add_custom_target(symlink_arfminesweeper-gl11 ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-gl11 module_dir)
        message(STATUS "Building with module gl11")
    else()
        message(STATUS "Not building with module gl11")
    endif()

    if (STATIC_GL11)
        target_sources(arfminesweeper PRIVATE "gl11.c" "../common/gl_ffp.c")
        target_link_libraries(arfminesweeper OpenGL::GL ${GLUT_LIBRARIES})
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_GL11)
        message(STATUS "Building with static gl11")
    else()
        message(STATUS "Not building with static gl11")
    endif()
else()
    message(STATUS "No OpenGL/FreeGLUT found")
endif()

