if (GTK3_FOUND)
    if (MODULE_GTK3)
        add_library(arfminesweeper-gtk3 MODULE "gtk3.c")
        target_compile_definitions(arfminesweeper-gtk3 PUBLIC _MODULE_)
        target_include_directories(arfminesweeper-gtk3 PUBLIC ${GTK3_INCLUDE_DIRS})
        target_link_libraries(arfminesweeper-gtk3 ${GTK3_LIBRARIES})
        add_custom_target(symlink_arfminesweeper-gtk3 ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-gtk3 module_dir)
        message(STATUS "Building with module gtk3")
    else()
        message(STATUS "Not building with module gtk3")
    endif()

    if (STATIC_GTK3)
        target_sources(arfminesweeper PRIVATE "gtk3.c")
        target_include_directories(arfminesweeper PUBLIC ${GTK3_INCLUDE_DIRS})
        target_link_libraries(arfminesweeper ${GTK3_LIBRARIES})
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_GTK3)
        message(STATUS "Building with static gtk3")
    else()
        message(STATUS "Not building with static gtk3")
    endif()
else()
    message(STATUS "No Gtk3 found")
endif()

