if (SDL2_FOUND AND SDL2_ttf_FOUND AND SDL2_image_FOUND)
    if (MODULE_SDL2)
        add_library(arfminesweeper-sdl2 MODULE "sdl2.c")
        target_compile_definitions(arfminesweeper-sdl2 PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-sdl2 ${SDL2_LIBRARIES} ${SDL2_ttf_LIBRARIES} ${SDL2_image_LIBRARIES})
        add_custom_target(arfminesweeper-symlink_sdl2 ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-sdl2 module_dir)
        message(STATUS "Building with module sdl2")
    else()
        message(STATUS "Not building with module sdl2")
    endif()

    if (STATIC_SDL2)
        target_sources(arfminesweeper PRIVATE "sdl2.c")
        target_link_libraries(arfminesweeper ${SDL2_LIBRARIES} ${SDL2_ttf_LIBRARIES} ${SDL2_image_LIBRARIES})
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_SDL2)
        message(STATUS "Building with static sdl2")
    else()
        message(STATUS "Not building with static sdl2")
    endif()
else()
    message(STATUS "No SDL2 found (SDL, SDL2_ttf, SDL2_image)")
endif()

